--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc",
     "serve": "node dist/index.js",
     "lint": "eslint . --ext .ts",
-    "test": "npx jest"
+    "test": "npx jest --coverage"
   },
   "author": "",
   "license": "ISC",
@@ -25,6 +25,7 @@
     "eslint": "^8.57.0",
     "express": "^4.18.3",
     "jest": "^29.7.0",
+    "nyc": "^15.1.0",
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
