create docker image

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -30,10 +30,11 @@ jobs:
       - name: Run tests
         run: npm test
 
-      # - name: Build Docker image
-      #   run: docker build -t luisrivas-project .
+      - name: Login to GitHub Packages
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
 
-      # - name: Push Docker image to registry
-      #   run: |
-      #     docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-      #     docker push luisrivas-project
+      - name: Build Docker image
+        run: docker build -t docker.pkg.github.com/${{ github.repository }}/luisrivas-project .
+
+      - name: Push Docker image to GitHub Packages
+        run: docker push docker.pkg.github.com/${{ github.repository }}/luisrivas-project
