--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -34,7 +34,7 @@ jobs:
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
 
       - name: Build Docker image
-        run: docker build -t docker.pkg.github.com/${{ github.repository }}/luisrivas-project .
+        run: docker build -t docker.pkg.github.com/luisrg98/${{ github.repository }}/luisrivas-project .
 
       - name: Push Docker image to GitHub Packages
         run: docker push docker.pkg.github.com/${{ github.repository }}/luisrivas-project
