--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -38,3 +38,6 @@ jobs:
 
       - name: Push Docker image to GitHub Packages
         run: docker push docker.pkg.github.com/luisrg98/jala-project-1/luisrivas-project
+
+      -name: Pull docker image locally
+        run: docker pull ghcr.io/luisrg98/jala-project-1/luisrivas-project:latest
