--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: "16"
+          node-version: "20"
 
       - name: Install dependencies
         run: npm install
@@ -38,3 +38,6 @@ jobs:
 
       - name: Push Docker image to GitHub Packages
         run: docker push docker.pkg.github.com/luisrg98/jala-project-1/luisrivas-project
+
+      - name: Pull Docker image
+        run: docker pull docker.pkg.github.com/luisrg98/jala-project-1/luisrivas-project
